Add diagnostic events for guardrails
patch by Andrés de la Peña; reviewed by Berenguer Blasi and Stefan Miklosovic for CASSANDRA-17197

Co-authored-by: Andrés de la Peña <a.penya.garcia@gmail.com>
Co-authored-by: Aleksandr Sorokoumov <aleksandr.sorokoumov@gmail.com>

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1583,7 +1583,7 @@ drop_compact_storage_enabled: false
 #         abort_threshold_kb: 0
 
 # Whether guardrails are enabled or not. Guardrails are disabled by default.
-# guardrails_enabled: true
+# guardrails_enabled: false
 # Guardrail to warn or fail when creating more user keyspaces than threshold.
 # The two thresholds default to -1 to disable.
 # keyspaces_warn_threshold: -1
