--- a/.circleci/config-2_1.yml
+++ b/.circleci/config-2_1.yml
@@ -41,7 +41,6 @@ default_env_vars: &default_env_vars
     CASSANDRA_SKIP_SYNC: true
     DTEST_REPO: https://github.com/apache/cassandra-dtest.git
     DTEST_BRANCH: trunk
-    JVM_DTEST_VERSION: "0.0.13-SNAPSHOT"
     CCM_MAX_HEAP_SIZE: 1024M
     CCM_HEAP_NEWSIZE: 256M
 
@@ -790,7 +789,7 @@ jobs:
       - run_parallel_junit_tests:
           classlistprefix: distributed
           target: "testclasslist"
-          arguments: "-Ddtest-api.version=0.0.13-SNAPSHOT -Dtest.jvm.args='-Dcassandra.dtest.num_tokens=4'"
+          arguments: "-Dtest.jvm.args='-Dcassandra.dtest.num_tokens=4'"
 
   j8_jvm_upgrade_dtests:
     <<: *j8_medium_par_executor
@@ -1207,7 +1206,7 @@ commands:
           cd ~/cassandra
           # Loop to prevent failure due to maven-ant-tasks not downloading a jar..
           for x in $(seq 1 3); do
-              ${ANT_HOME}/bin/ant clean realclean jar -Ddtest-api.version=$JVM_DTEST_VERSION
+              ${ANT_HOME}/bin/ant clean realclean jar
               RETURN="$?"
               if [ "${RETURN}" -eq "0" ]; then
                   break
@@ -1237,7 +1236,7 @@ commands:
             git clean -fd
             # Loop to prevent failure due to maven-ant-tasks not downloading a jar..
             for x in $(seq 1 3); do
-                ${ANT_HOME}/bin/ant realclean; ${ANT_HOME}/bin/ant jar dtest-jar -Ddtest-api.version=$JVM_DTEST_VERSION
+                ${ANT_HOME}/bin/ant realclean; ${ANT_HOME}/bin/ant jar dtest-jar
                 RETURN="$?"
                 if [ "${RETURN}" -eq "0" ]; then
                     cp build/dtest*.jar ~/dtest_jars
@@ -1255,7 +1254,7 @@ commands:
           git checkout origin/$CIRCLE_BRANCH
           git clean -fd
           for x in $(seq 1 3); do
-              ${ANT_HOME}/bin/ant realclean; ${ANT_HOME}/bin/ant jar dtest-jar -Ddtest-api.version=$JVM_DTEST_VERSION
+              ${ANT_HOME}/bin/ant realclean; ${ANT_HOME}/bin/ant jar dtest-jar
               RETURN="$?"
               if [ "${RETURN}" -eq "0" ]; then
                   cp build/dtest*.jar ~/dtest_jars
@@ -1277,7 +1276,7 @@ commands:
         command: |
           export PATH=$JAVA_HOME/bin:$PATH
           cd ~/cassandra
-          ant eclipse-warnings -Ddtest-api.version=$JVM_DTEST_VERSION
+          ant eclipse-warnings
 
   create_junit_containers:
     parameters:
@@ -1326,7 +1325,7 @@ commands:
           if [ -d ~/dtest_jars ]; then
             cp ~/dtest_jars/dtest* /tmp/cassandra/build/
           fi
-          ant <<parameters.target>> -Ddtest-api.version=$JVM_DTEST_VERSION
+          ant <<parameters.target>>
         no_output_timeout: <<parameters.no_output_timeout>>
     - store_test_results:
         path: /tmp/cassandra/build/test/output/
@@ -1383,7 +1382,7 @@ commands:
           if [ -z "$test_timeout" ]; then
             test_timeout=$(grep 'name="test.timeout"' build.xml | awk -F'"' '{print $4}')
           fi
-          ant <<parameters.target>> <<parameters.arguments>> -Ddtest-api.version=$JVM_DTEST_VERSION -Dtest.timeout="$test_timeout" -Dtest.classlistfile=/tmp/java_tests_${CIRCLE_NODE_INDEX}_final.txt  -Dtest.classlistprefix=<<parameters.classlistprefix>>
+          ant <<parameters.target>> <<parameters.arguments>> -Dtest.timeout="$test_timeout" -Dtest.classlistfile=/tmp/java_tests_${CIRCLE_NODE_INDEX}_final.txt  -Dtest.classlistprefix=<<parameters.classlistprefix>>
         no_output_timeout: <<parameters.no_output_timeout>>
     - store_test_results:
         path: /tmp/cassandra/build/test/output/
@@ -1582,7 +1581,7 @@ commands:
 
                   # run the test
                   status="passes"
-                  if !( set -o pipefail && ant $target $name $methods -Dno-build-test=true -Ddtest-api.version=$JVM_DTEST_VERSION | tee stdout.txt ); then
+                  if !( set -o pipefail && ant $target $name $methods -Dno-build-test=true | tee stdout.txt ); then
                     status="fails"
                     exit_code=1
                   fi
